[package]
name = "esteganografia"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
anyhow = "1.0"
byteorder = "1.5"
lzma-rs = "0.3"
serde = { version = "1.0", features = ["derive"] } # Novo
bincode = "1.3" # Novo
walkdir = "2" # Novo (para listar arquivos facilmente)
clap = { version = "4.0", features = ["derive"] } # NOVO: Para linha de comando
filetime = "0.2"
chrono = "0.4"